--- a/tempmail/templates/base.html
+++ b/tempmail/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body
-    class="bg-gray-100 text-gray-700 dark:bg-dark-bg dark:text-dark-text antialiased font-sans flex flex-col min-h-screen">
+    class="bg-gray-100 text-gray-700 dark:bg-dark-bg dark:text-dark-text antialiased font-sans flex flex-col min-h-screen text-base 2xl:text-lg">
 
     {% include "parciais/_nav.html" %}
 
