--- a/tempmail/templates/parciais/_footer.html
+++ b/tempmail/templates/parciais/_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 
-<footer class="max-w-7xl mx-auto px-4 py-6 text-gray-500 text-xs sm:text-sm font-medium flex gap-6 justify-center flex-wrap">
+<footer class="max-w-[1920px] mx-auto px-4 2xl:px-24 py-6 2xl:py-8 text-gray-500 text-xs sm:text-sm 2xl:text-base font-medium flex gap-6 2xl:gap-8 justify-center flex-wrap">
     <a href="{% url 'sobre' %}" class="hover:text-orange-600 transition">
         {% trans "Sobre" %}
     </a>
