--- a/tempmail/templates/parciais/_messages.html
+++ b/tempmail/templates/parciais/_messages.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
 {% if messages %}
-<div id="alerts" class="flex flex-col gap-4 mb-6 w-full animate-in fade-in duration-500">
+<div id="alerts" class="flex flex-col gap-4 2xl:gap-5 mb-6 2xl:mb-8 w-full animate-in fade-in duration-500">
     {% for message in messages %}
     <div id="alert-{{ forloop.counter }}">
-        <div class="flex p-4 rounded-lg border relative w-full
+        <div class="flex p-4 2xl:p-5 rounded-lg border relative w-full
             {% if message.tags == 'error' or message.tags == 'alert-danger' %}
                 bg-red-50 text-red-800 border-red-200 dark:bg-gray-800 dark:text-red-400 dark:border-red-900
             {% elif message.tags == 'warning' or message.tags == 'alert-warning' %}
@@ -15,7 +15,7 @@
                 bg-blue-50 text-blue-800 border-blue-200 dark:bg-gray-800 dark:text-blue-400 dark:border-blue-900
             {% endif %}" role="alert">
 
-            <span class="inline-flex shrink-0 justify-center items-center w-5 h-5 mt-0.5">
+            <span class="inline-flex shrink-0 justify-center items-center w-5 h-5 2xl:w-6 2xl:h-6 mt-0.5 2xl:text-lg">
                 {% if message.tags == 'error' or message.tags == 'alert-danger' %}
                 <i class="fa-solid fa-circle-xmark"></i>
                 {% elif message.tags == 'warning' or message.tags == 'alert-warning' %}
@@ -27,7 +27,7 @@
                 {% endif %}
             </span>
 
-            <div class="ms-3 text-sm font-medium flex-1 min-w-0">
+            <div class="ms-3 2xl:ms-4 text-sm 2xl:text-base font-medium flex-1 min-w-0">
 
                 {% with msg_str=message|stringformat:"s" %}
                 {% if msg_str|length > 100 %}
