--- a/tempmail/templates/parciais/_qrPopover.html
+++ b/tempmail/templates/parciais/_qrPopover.html
@@ -2,21 +2,21 @@
 
 <div id="qrContent" class="hidden fixed z-[100] transition-all">
     <div
-        class="absolute -top-1.5 left-1/2 -translate-x-1/2 w-3.5 h-3.5 bg-white dark:bg-gray-800 rotate-45 border-l border-t border-gray-100 dark:border-gray-700 z-10">
+        class="absolute -top-1.5 left-1/2 -translate-x-1/2 w-3.5 h-3.5 2xl:w-4 2xl:h-4 bg-white dark:bg-gray-800 rotate-45 border-l border-t border-gray-100 dark:border-gray-700 z-10">
     </div>
 
-    <div class="bg-white dark:bg-gray-800 p-4 shadow-2xl rounded-2xl border border-gray-100 dark:border-gray-700 w-64">
-        <div class="flex flex-col items-center gap-3">
+    <div class="bg-white dark:bg-gray-800 p-4 2xl:p-5 shadow-2xl rounded-2xl border border-gray-100 dark:border-gray-700 w-64 2xl:w-80">
+        <div class="flex flex-col items-center gap-3 2xl:gap-4">
             <div
-                class="bg-white p-1.5 rounded-xl w-full aspect-square flex items-center justify-center shadow-inner overflow-hidden">
+                class="bg-white p-1.5 2xl:p-2 rounded-xl w-full aspect-square flex items-center justify-center shadow-inner overflow-hidden">
                 <div id="qrImage" class="w-full h-full flex items-center justify-center"></div>
             </div>
 
             <div class="flex flex-col items-center">
-                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">
+                <span class="text-[10px] 2xl:text-xs font-bold text-gray-400 uppercase tracking-widest">
                     {% trans "Escaneie seu email" %}
                 </span>
-                <span class="text-sm font-black text-orange-600 uppercase tracking-tighter">
+                <span class="text-sm 2xl:text-base font-black text-orange-600 uppercase tracking-tighter">
                     Email<span class="text-gray-900 dark:text-white">Rush</span>
                 </span>
             </div>
